# pocket-lint

./: .bzrignore  .gitignore  .travis.yml  AUTHORS  HACKING  INSTALL  MANIFEST.in  Makefile  Makefile.am  NEWS  README  aclocal.m4  autogen.sh  configure.ac  format.py  formatcheck.py  formatdoctest.py  pylint.gedit-plugin  setup.py  syntaxcompleter.gedit-plugin  test.py  testrc.py
bzr_plugins/: gnulog.py
contrib/: Makefile.am
debian/: changelog  control  rules  watch
gedit/: __init__.py  gedit.overrides  geditcommands.py  geditutils.py
language-specs/: Makefile.am  diff.lang  doctest.lang  ini.lang  moin.lang  pagetemplate.lang  python.lang
lint/: gedit_pylint.py
plugins/: Makefile.am  find.gedit-plugin.deskton.in  findplugin.py  gdpbzr.gedit-plugin.deskton.in  gdpbzr.py  gdpfind.gedit-plugin.deskton.in  gdpfind.gedit-plugin.desktop.in  gdpfind.py  gdpformat.gedit-plugin.desktop.in  gdpformat.py  gdpsyntaxcompleter.gedit-plugin.desktop.in  gdpsyntaxcompleter.py  lintplugin.py  search.gedit-plugin.deskton.in  searchplugin.py  syntaxcompleter.gedit-plugin  syntaxcompleter.py  syntaxcompleterplugin.py
plugins/data/: snark12.txt
plugins/ftests/: syntaxcompleter.doctest
plugins/gdp/: Makefile.am  __init__.py  bzr.py  find.py  find.ui  format.py  format.ui  formatcheck.py  formatdoctest.py  gdp.glade  gdp.gladep  lint.py  syntaxcompleter.py  syntaxcontext.py  syntaxmodels.py
plugins/gdp/data/: hackerese.txt  snark.css  snark.html  snark.py
plugins/gdp/ftests/: syntaxcompleter.doctest
plugins/gdp/tests/: __init__.py  find-generator.doctest  formatcheck.doctest  formatter.doctest  helpers.py  syntaxcompleter-completemodel.doctest  syntaxcompleter-controller.doctest  syntaxcompleter-generator.doctest  syntaxcompleter-model.doctest  syntaxcompleter-provider.doctest  syntaxcompleter-view.doctest  syntaxmodels.doctest
plugins/tests/: __init__.py  completers.doctest  findplugin.doctest  helpers.py  syntaxcompleter-completemodel.doctest  syntaxcompleterplugin.doctest  syntaxcontext.doctest  syntaxmodels.doctest
po/: POTFILES.in  POTFILES.skip
pocketlint/: __init__.py  format.py  formatcheck.py  formatdoctest.py  html5browser.py  jsreporter.js  reporter.py
pocketlint/contrib/: cssccc.py  fulljslint.js  pep257_plugin.py  pep8.py
pocketlint/contrib/pyflakes/: checker.py
pocketlint/tests/: __init__.py  data.py  test_css.py  test_cssccc.py  test_doctest.py  test_go.py  test_javascript.py  test_json.py  test_python.py  test_reporter.py  test_restructuredtext.py  test_sql.py  test_text.py  test_xml.py
pylint/: __init__.py  gedit_pylint.py
scripts/: pocketlint
snippets/: Makefile.am  diff.xml  doctest.xml  global.xml  html.xml  python.xml  rst.xml  ruby.xml  sql.xml
syntaxcompler/: __init__.py  syntaxcompleter.py
syntaxcompleter/: __init__.py  syntaxcompleter.py
testing/: Makefile.am  __init__.py  doctest.py  fakegen.py  gedithelpers.py  helpers.py  mockpygen.py  testrunner.py
testing/tests/: gedithelpers.doctest  testing.doctest
tools/: 2-make  3-lint  3-make-lint  4-shift-test  4-test  5-bzr-diff  5-bzr-diff-ancestor  Makefile.am  build  bzr-annotate  bzr-commit  bzr-diff-ancestor  bzr-diff-branch  bzr-diff-file  bzr-open-changed-files  bzr-pqm-submit  bzr-push  bzr-status  encode  find-in-files  find.py  format-doctest  formatdoctest.py  help  link-rst-interfaces  make-run  open-terminal-here  quote-lines  remove-trailing-spaces  run-command  selectioncommands.py  task-selection.glade  task-selection.gladep  tidy
utils/: __init__.py  gen-gedit.py  mockpygen.py  testrunner.py
